force-app/main/default/objects/StudentMaster2__c/StudentMaster2__c.object-meta.xml
<CustomObject>
    <label>StudentMaster2</label>
    <nameField>
        <label>StudentMaster2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StudentMaster2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>