force-app/main/default/objects/StudentMaster2__c/fields/Graduationdone__c.field-meta.xml
<CustomField>
    <fullName>Graduationdone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Graduationdone</label>
    <type>Checkbox</type>
</CustomField>