force-app/main/default/objects/StudentMaster2__c/recordTypes/Post_Graduate.recordType-meta.xml
<RecordType>
    <fullName>Post_Graduate</fullName>
    <active>true</active>
    <label>Post Graduate</label>
</RecordType>