force-app/main/default/objects/StudentMaster2__c/recordTypes/Under_Graduate.recordType-meta.xml
<RecordType>
    <fullName>Under_Graduate</fullName>
    <active>true</active>
    <label>Under Graduate</label>
</RecordType>